--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
         height: 100%;
         width: 100%;
       }
+
+      #infoDiv {
+        position: absolute;
+        top: 15px;
+        left: 60px;
+      }
+
+      #infoDiv input {
+        border: none;
+        box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 2px;
+      }
+
+      #logo {
+        display: inline;
+        position: absolute;
+        z-index: 999;
+        right: 0;
+      }
     </style>
     <link rel="stylesheet" href="https://js.arcgis.com/4.12/esri/css/main.css">
     <script>
@@ -29,7 +47,22 @@
     <script src="https://js.arcgis.com/4.12/"></script>
   </head>
   <body>
+    <img id="logo" src="https://static.auburnalabama.org/media/citylogos/pwa/mstile-150x150.png" crossorigin="anonymous" />
     <div id="viewDiv"></div>
+    <div id="infoDiv">
+        <input
+          class="esri-component esri-widget--button esri-widget esri-interactive"
+          type="button"
+          id="switch-btn"
+          value="2D"
+        />
+        <input
+          class="esri-component esri-widget--button esri-widget esri-interactive"
+          type="button"
+          id="screenshot-btn"
+          value="SS"
+        />
+    </div>
     <script>require(["app/main"]);</script>
   </body>
 </html>
